Fix the results table layout on mobile.

--- a/osp/www/assets/stylesheets/ranks/filters.less
+++ b/osp/www/assets/stylesheets/ranks/filters.less
@@ -8,8 +8,16 @@
     margin: 0 0 2em;
   }
 
+  .Select {
+    font-size: 15px;
+  }
+
   .Select-control {
     .border-radius(1px);
+  }
+
+  .Select-placeholder {
+    color: #aaa;
   }
 
   h4 {
