--- a/osp/www/assets/stylesheets/ranks/results.less
+++ b/osp/www/assets/stylesheets/ranks/results.less
@@ -108,3 +108,19 @@
   }
 
 }
+
+
+// Vertical:
+@media (max-width: @screen-xs-min) {
+  #text-list {
+
+    td.rank {
+      font-size: 1.4em;
+    }
+
+    td.count, td.score, .title {
+      font-size: 1.2em;
+    }
+
+  }
+}
